third_party/rust/chromium_crates_io/vendor/serde_json-1.0.78/tests/ui/unexpected_colon.stderr
error: no rules expected the token `:`
 --> tests/ui/unexpected_colon.rs:4:13
  |
4 |     json!({ : true });
  |             ^ no rules expected this token in macro call
